--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 Script: <a href="js/jquery.click.js">test.stephband.info/js/jquery.click.js</a>
 </div>
 
-<script src="../js/jquery-nightly.js" type="text/javascript"></script>
+<script src="js/jquery-nightly.js" type="text/javascript"></script>
 <script src="js/jquery.event.click.js" type="text/javascript"></script>
 <script type="text/javascript">
 
@@ -64,7 +64,6 @@ Script: <a href="js/jquery.click.js">test.stephband.info/js/jquery.click.js</a>
         
         jQuery("body")
         .bind('click', function(e){
-            jQuery(this).append(jQuery("<span/>").html(e.href || 'no e.href'));
             jQuery(e.target).css({background: 'green'});
             return false;
         });
