--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </div>
 </div>
 <div>
-Script: <a href="js/jquery.click.js">test.stephband.info/js/jquery.click.js</a>
+<p><a href="js/jquery.click.js">test.stephband.info/js/jquery.click.js</a></p>
+<p><a href="http://github.com/stephband/jquery.event.frame/archives/master">github.com/stephband/jquery.event.click/archives/master</a></p>
 </div>
 
 <script src="js/jquery-nightly.js" type="text/javascript"></script>
